remove determine_see dependency

--- a/benchmark.ini
+++ b/benchmark.ini
@@ -5,7 +5,7 @@ meta-label=fio ${bm_meta_version}
 meta-description=SPEC CPU2006 is designed to provide a comparative measure of compute-intensive performance across the widest practical range of hardware using workloads developed from real user applications. Metrics for both integer and floating point compute intensive performance are provided.
 
 # install settings
-install-deps=/usr/bin/php,/usr/bin/determine_sse
+install-deps=/usr/bin/php
 
 parse-metrics=/^SPECint/,/^SPECfp/,/^base_rate/,/^peak_rate/,/^base_ratio/,/^peak_ratio/
 
@@ -16,6 +16,7 @@ parse-metrics=/^SPECint/,/^SPECfp/,/^base_rate/,/^peak_rate/,/^base_ratio/,/^pea
 run-estimate=15m
 run-timeout=72h
 
+save-artifact-iteration=output.log
 save-artifact-iteration=/artifacts\/.*\..*/
 
 save-data-run=/cpu_*/
