initial implementation of standalone version

--- a/benchmark.ini
+++ b/benchmark.ini
@@ -1,12 +1,13 @@
 # benchmark metadata
 meta-id=speccpu2006
 meta-version=1.2
-meta-label=fio ${bm_meta_version}
+meta-label=SPEC CPU 2006 ${bm_meta_version}
 meta-description=SPEC CPU2006 is designed to provide a comparative measure of compute-intensive performance across the widest practical range of hardware using workloads developed from real user applications. Metrics for both integer and floating point compute intensive performance are provided.
 
 # install settings
 install-deps=/usr/bin/php
-
+install-deps=/usr/bin/perl
+parse-command=lib/parse.php
 parse-metrics=/^SPECint/,/^SPECfp/,/^base_rate/,/^peak_rate/,/^base_ratio/,/^peak_ratio/
 
 # runtime is dependent on the tests run, # of iterations, tuning options (base
@@ -17,7 +18,16 @@ run-estimate=15m
 run-timeout=72h
 
 save-artifact-iteration=output.log
-save-artifact-iteration=/artifacts\/.*\..*/
+save-artifact-iteration=specint2006.csv
+save-artifact-iteration=specint2006.gif
+save-artifact-iteration=specint2006.html
+save-artifact-iteration=specint2006.pdf
+save-artifact-iteration=specint2006.txt
+save-artifact-iteration=specfp2006.csv
+save-artifact-iteration=specfp2006.gif
+save-artifact-iteration=specfp2006.html
+save-artifact-iteration=specfp2006.pdf
+save-artifact-iteration=specfp2006.txt
 
 save-data-run=/cpu_*/
 save-data-run=-cpu_cache
