allow 0 value in environment variable set runtime parameters

--- a/run-params.ini
+++ b/run-params.ini
@@ -8,10 +8,6 @@ benchmark-param-default=all
 copies=Number of Copies
 copies-param-default=x64:100%/2GB|100%/1GB
 
-debug=Debug?
-debug-param-default=0
-debug-param-match=/^[01]$/
-
 # define_*=runspec Macros (optional)
 
 delay=Delay
@@ -34,25 +30,9 @@ ignore_errors=Ignore Errors?
 ignore_errors-param-default=0
 ignore_errors-param-match=/^[01]$/
 
-include_benchmark_metrics=Include Benchmark Metrics?
-include_benchmark_metrics-param-default=1
-include_benchmark_metrics-param-match=/^[01]$/
-
-include_ref_times=Include Reference Times?
-include_ref_times-param-default=0
-include_ref_times-param-match=/^[01]$/
-
-include_run_times=Include Run Times?
-include_run_times-param-default=0
-include_run_times-param-match=/^[01]$/
-
 iterations=Number of Iterations
 iterations-param-default=3
 iterations-param-match=/^[0-9]+$/
-
-max_copies=Max Copies
-max_copies-param-default=0
-max_copies-param-match=/^[0-9]+$/
 
 # meta_*=Meta Parameters (see README)
 
@@ -113,6 +93,10 @@ tune-param-options=base,peak,all
 validate_disk_space=Validate Disk Space?
 validate_disk_space-param-default=1
 validate_disk_space-param-match=/^[01]$/
+
+verbose=Debug?
+verbose-param-default=0
+verbose-param-match=/^[01]$/
 
 x64=x64?
 x64-param-default=2
