bug fix for save.sh --iteration argument

--- a/config/spec-benchmarks.ini
+++ b/config/spec-benchmarks.ini
@@ -22,14 +22,14 @@ fp=SPECfp2006
 433.milc
 434.zeusmp
 435.gromacs
-436.cactusADM
+436.cactusadm
 437.leslie3d
 444.namd
-447.dealII
+447.dealii
 450.soplex
 453.povray
 454.calculix
-459.GemsFDTD
+459.gemsfdtd
 465.tonto
 470.lbm
 481.wrf
