--- a/run-params.ini
+++ b/run-params.ini
@@ -6,7 +6,7 @@ benchmark-param-default=all
 # config=Config File (optional)
 
 copies=Number of Copies
-copies-param-default=x64:100%/2GB|100%/1GB
+copies-param-default=x64:100%/1GB|100%/512MB
 
 # define_*=runspec Macros (optional)
 
