added support for AVX2

--- a/run-params.ini
+++ b/run-params.ini
@@ -76,15 +76,15 @@ spec_dir-param-default=/opt/cpu2006
 
 sse=SSE Flag
 sse-param-default=optimal
-sse-param-options=optimal,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
+sse-param-options=optimal,AVX2,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
 
 sse_max=Max SSE Flag
-sse_max-param-default=SSE4.2
-sse_max-param-options=AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
+sse_max-param-default=AVX2
+sse_max-param-options=AVX2,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
 
 sse_min=Min SSE Flag
-sse_min-param-default=SSSE3
-sse_min-param-options=AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
+sse_min-param-default=SSE4.2
+sse_min-param-options=AVX2,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
 
 tune=Tune
 tune-param-default=base
