added none sse option

--- a/run-params.ini
+++ b/run-params.ini
@@ -76,7 +76,7 @@ spec_dir-param-default=/opt/cpu2006
 
 sse=SSE Flag
 sse-param-default=optimal
-sse-param-options=optimal,AVX2,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
+sse-param-options=optimal,AVX2,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2,none
 
 sse_max=Max SSE Flag
 sse_max-param-default=AVX2
