do not use environment variables when the same args have been set as cli args

--- a/run-params.ini
+++ b/run-params.ini
@@ -86,6 +86,10 @@ sse_min=Min SSE Flag
 sse_min-param-default=SSE4.2
 sse_min-param-options=AVX2,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
 
+sse_skip=Min SSE Flag
+sse_skip-param-default=SSE4.2
+sse_skip-param-options=AVX2,AVX,SSE4.2,SSE4.1,SSSE3,SSE3,SSE2
+
 tune=Tune
 tune-param-default=base
 tune-param-options=base,peak,all
